--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="alumni.html">Alumni</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
@@ -45,7 +46,7 @@
             </div>
 
             <div class="about__students-right">
-                <h1>Students</h1>
+                <h1>STUDENT</h1>
                 <p><i class="fa-solid fa-at"></i> ACLC Malolos, we maintain a highly conducive learning environment with a remarkable teacher-to-student ratio. With 20 dedicated teachers catering to 140 college, and 160 senior high school students, our institution ensures a personalized approach to education.</p>
                 <p>We believe that this optimal ratio contributes significantly to the success and development of each student, fostering a dynamic and engaging educational journey at ACLC Malolos.</p>
                 <div class="students__cards">
@@ -79,7 +80,7 @@
     <!-- END OF STUDENTS -->
 
     <section class="teacher">
-        <h2>Meet our Instructor</h2>
+        <h2>MEET OUR INSTRUCTOR</h2>
         <div class="container teacher__container">
             <article class="teacher__member">
                 <div class="teacher__member-image">
@@ -236,7 +237,7 @@
 
     <section id="exhibitions">
         <div class="container exhibitions__container">
-            <h2 class="exhibitions__title">Facility and Room Gallery</h2>
+            <h2 class="exhibitions__title">FACILITY AND ROOM GALLERY</h2>
             <div class="exhibitions__head">
                 <p>Here are some of our facilities and rooms available for showcasing.<br>For more information, please visit our Facebook page.</p>
             </div>
