--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="alumni.html">Alumni</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
@@ -44,7 +45,7 @@
             <div class="aside__image">
                 <img src="./image/contact.svg" alt="">
             </div>
-            <h2>Contact Us</h2>
+            <h2>CONTACT US</h2>
             <p>ACLC Malolos Office Hours:  8:00 AM - 5:00 PM<br>We appreciate your interest in ACLC Malolos and look forward to assisting you.</p>
             <ul class="contact__details">
                 <li>
