--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="alumni.html">Alumni</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
@@ -44,8 +45,8 @@
         <div class="container header__container">
             <div class="header__left">
                 <h1>ACLC COLLEGE MALOLOS</h1>
-                <p>Member of AMA EDUCATION SYSTEM. AMA Education System (AMAES) is the largest network of Senior High Schools nationwide. Pioneer. First IT school in the Philippines.</p>
-                <p>The only branch consistently producing world class I.T Champions. ACLC College aims to produce highly competent graduates, especially in the field of IT and other fields that require knowledge in current technology.</p>
+                <p>Member of AMA EDUCATION SYSTEM. AMA Education System (AMAES) is the largest network of Senior High Schools nationwide. Pioneer. First I.T school in the Philippines.</p>
+                <p>The only branch consistently producing world class I.T Champions. ACLC College aims to produce highly competent graduates, especially in the field of I.T and other fields that require knowledge in current technology.</p>
                 <a href="courses.html" class="btn btn-primary">Get Started</a>
             </div>
 
@@ -108,7 +109,7 @@
     <!-- END OF CATEGORIES -->
 
     <section class="courses">
-        <h2>Our Popular Courses</h2>
+        <h2>OUR POPULAR COURSES</h2>
         <div class="container courses__container">
             <article class="course">
                 <div class="course__image">
@@ -153,13 +154,13 @@
     <!-- END OF COURSES -->
 
     <section class="faqs">
-        <h2>More Information About Us</h2>
+        <h2>MORE INFORMATION ABOUT US</h2>
         <div class="container faqs__container">
             <article class="faq">
                 <div class="faq__icon"><i class="fa-solid fa-toggle-off"></i></div>
                 <div class="question__answer">
                     <h4>ABOUT US: ACLC COLLEGE</h4>
-                    <p class="justifier">A member of the AMA Education System (AMAES) founded by Dr. Amable R. Aguiluz V – the father of IT education in the Philippines. Established in 1986, ACLC stands for AMA Computer Learning Center, as it was originally a computer training center offering skill-based courses on computer hardware and software. To date, ACLC remain to be a popular choice for TESDA Short Courses in the Philippines.</p>
+                    <p class="justifier">A member of the AMA Education System (AMAES) founded by Dr. Amable R. Aguiluz V – the father of I.T education in the Philippines. Established in 1986, ACLC stands for AMA Computer Learning Center, as it was originally a computer training center offering skill-based courses on computer hardware and software. To date, ACLC remain to be a popular choice for TESDA Short Courses in the Philippines.</p>
                 </div>
             </article>
 
@@ -175,7 +176,7 @@
                 <div class="faq__icon"><i class="fa-solid fa-toggle-off"></i></div>
                 <div class="question__answer">
                     <h4>K TO 12 IN THE PHILIPPINES</h4>
-                    <p class="justifier">With the implementation of the K to 12 programs in the Philippines, ACLC is one of the first private institutions to support the program by offering senior high school and accepting DepEd voucher. As a member of AMAES, the unified AMA Senior High program is offered in all ACLC campuses. With AMAES being known as a pioneer in IT education, ACLC implements blended learning for senior high school, wherein students go to school only 3 days a week, as 50% of the lessons are delivered through online education and the remaining 50% is delivered through face-to-face classes.</p>
+                    <p class="justifier">With the implementation of the K to 12 programs in the Philippines, ACLC is one of the first private institutions to support the program by offering senior high school and accepting DepEd voucher. As a member of AMAES, the unified AMA Senior High program is offered in all ACLC campuses. With AMAES being known as a pioneer in I.T education, ACLC implements blended learning for senior high school, wherein students go to school only 3 days a week, as 50% of the lessons are delivered through online education and the remaining 50% is delivered through face-to-face classes.</p>
                 </div>
             </article>
 
@@ -191,7 +192,7 @@
                 <div class="faq__icon"><i class="fa-solid fa-toggle-off"></i></div>
                 <div class="question__answer">
                     <h4>MISSION</h4>
-                    <p class="justifier">Provide a holistic, quality and globally recognized IT-based Education in all levels and disciplines with the objective of producing professionals and leaders responsive to the needs of Science and the International Community cognizant of the welfare and benefit of its men and women thereby realizing their potential as productive members of society for the honor of God Almighty.</p>
+                    <p class="justifier">Provide a holistic, quality and globally recognized I.T-based Education in all levels and disciplines with the objective of producing professionals and leaders responsive to the needs of Science and the International Community cognizant of the welfare and benefit of its men and women thereby realizing their potential as productive members of society for the honor of God Almighty.</p>
                 </div>
             </article>
 
@@ -219,9 +220,9 @@
                 <div class="faq__icon"><i class="fa-solid fa-toggle-off"></i></div>
                 <div class="question__answer">
                     <h4>AMA HYMN</h4>
-                    <p>Stanza I : You put us in mold dear Alma Mater, You hold the future in this race against time, Through the years in your fold, You nurtured our dreams, Our promise to you</p>
-                    <p>Chorus : Dear Alma Mater You have given us arms, For the battles of life, And the conquest of our dreams Oh, Dear AMA, You have sharpened our minds, We will triumph by which, The toast is for you</p>
-                    <p>Stanza II : The light up ahead is victory foreseen, With noble desires we behold its gleam, Our Motherland lays her hope on the youth, The future that we hold is her hope, That unfolds</p>
+                    <p>Stanza I :<br>You put us in mold dear Alma Mater, You hold the future in this race against time, Through the years in your fold, You nurtured our dreams, Our promise to you</p>
+                    <p>Chorus :<br>Dear Alma Mater You have given us arms, For the battles of life, And the conquest of our dreams Oh, Dear AMA, You have sharpened our minds, We will triumph by which, The toast is for you</p>
+                    <p>Stanza II :<br>The light up ahead is victory foreseen, With noble desires we behold its gleam, Our Motherland lays her hope on the youth, The future that we hold is her hope, That unfolds</p>
                     <p>(Repeat Chorus)</p>
                 </div>
             </article>
@@ -241,7 +242,7 @@
                 <div class="faq__icon"><i class="fa-solid fa-toggle-off"></i></div>
                 <div class="question__answer">
                     <h4>MEMBER OF AMA EDUCATION SYSTEM</h4>
-                    <p class="justifier">ACLC College is a member of the AMA Education System and is one of the leading computer schools in the country. With a curriculum that is based on the requirements of the actual industry, ACLC College aims to produce highly competent graduates, especially in the field of IT and other fields that require knowledge in today's technology</p>
+                    <p class="justifier">ACLC College is a member of the AMA Education System and is one of the leading computer schools in the country. With a curriculum that is based on the requirements of the actual industry, ACLC College aims to produce highly competent graduates, especially in the field of I.T and other fields that require knowledge in today's technology</p>
                 </div>
             </article>
 
@@ -261,7 +262,7 @@
                 <div class="faq__icon"><i class="fa-solid fa-toggle-off"></i></div>
                 <div class="question__answer">
                     <h4>SCHOOL PHILOSOPHY</h4>
-                    <p class="justifier">The educational philosophy of ACLC College Valencia, Bukidnon rests on its commitment to be of service to students through the provision of an environment where there would be opportunities to relate theories and knowledge to practical training. The College focuses the students to a life and a future integrated with the real working world</p>
+                    <p class="justifier">The educational philosophy of ACLC College Malolos, rests on its commitment to be of service to students through the provision of an environment where there would be opportunities to relate theories and knowledge to practical training. The College focuses the students to a life and a future integrated with the real working world</p>
                     <p class="justifier">With this theory in Education, ACLC then dedicates itself to the molding of future professionals in attaining a dream, to take an active role in the education and training of the students through continuous innovation of education program and evaluation of industry needs</p>
                 </div>
             </article>
@@ -272,7 +273,7 @@
     <section id="event">
         <div class="container event__container swiper mySwiper">
             <div class="event__head">
-                <h2 class="event__title">Event and Announcement</h2>
+                <h2 class="event__title">EVENT AND ANNOUNCEMENT</h2>
                 <div class="empty event__empty"></div>
             </div>
             <p>This section is dedicated to events and announcements at ACLC College Malolos.<br>For more information, please visit our Facebook page.</p>
