--- a/courses.html
+++ b/courses.html
@@ -31,6 +31,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="alumni.html">Alumni</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
